--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/websockets": "^5.0.0",
     "fastify-formbody": "^2.0.0",
     "mysql": "^2.15.0",
+    "randomstring": "^1.1.5",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.0.0",
     "typeorm": "^0.2.6",
