Added areyouinfordinner url

--- a/.docker/nginx/hosts/nginx.conf
+++ b/.docker/nginx/hosts/nginx.conf
@@ -2,21 +2,12 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name areyouinfordinner.co.uk;
-
-    return 301 $scheme://www.$host$request_uri;
-
-}
-server {
-    listen 80;
-    listen [::]:80;
-
     open_file_cache          max=2000 inactive=20s;
     open_file_cache_valid    60s;
     open_file_cache_min_uses 5;
     open_file_cache_errors   off;
 
-    server_name areyouinfordinner.local www.areyouinfordinner.co.uk;
+    server_name areyouinfordinner.ashleighsimonelli.co.uk;
 
     location / {
         proxy_pass http://localhost:3000;
